@@ -1,3 +1,10 @@
+2005-08-21  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>
+
+	* src/mainframe.cpp:
+	Add a simple control menu to swich Nancy Bot on and off.
+	Add a pane to status bar to indicate whether NancyBot is enabled.
+	Add a pane to status bar displaying elapsed time.
+
 2005-08-20  Youchen Lee  <youchen.lee@gmail.com>
 
 	* src/view/telnetcon.cpp,
